Fix security and controllers